tournamentinfo aus konstruktot TRF raus